@@ -1,12 +1,12 @@
 #!/bin/bash
 # not a real script yet, just a placeholder for ideas...
 
-b 24 gtk2 t
-b 24 gtk2   BUILD_RENAMERS=0 PREP_ONLY=1 FULL_DOCS=1
+b 26 gtk2 t
+b 26 gtk2   BUILD_RENAMERS=0 PREP_ONLY=1 FULL_DOCS=1
 ##docs/bin/simplify.py
 docs/bin/makeapidocs
-b 24 gtk2 t
-b 24 gtk2   BUILD_RENAMERS=0 PREP_ONLY=1
+b 26 gtk2 t
+b 26 gtk2   BUILD_RENAMERS=0 PREP_ONLY=1
 
 if [ "$1" == "upload" ]; then
     scp -r docs/api robind@shell.sf.net:/home/users/r/ro/robind/wxpython/htdocs/docs
